--- a/Neuroevolution.ipynb
+++ b/Neuroevolution.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# **NEUROEVOLUTION**"
-      ],
       "metadata": {
         "id": "t-M8VLB3myO3"
-      }
+      },
+      "source": [
+        "# **NEUROEVOLUTION**"
+      ]
     },
     {
       "cell_type": "code",
@@ -35,8 +21,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Shape: (2000, 100, 100, 1) Labels: (2000,)\n"
           ]
@@ -73,6 +59,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "ffzQc49mnsMW"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "from tensorflow.keras import Sequential\n",
@@ -103,15 +94,15 @@
         "                  loss='binary_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
         "    return model"
-      ],
-      "metadata": {
-        "id": "ffzQc49mnsMW"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "T49j0ZXFntQ2"
+      },
+      "outputs": [],
       "source": [
         "#función de aptitud = val_accuracy //  redes => mejores y descartes\n",
         "def fitness(chrom):\n",
@@ -121,15 +112,15 @@
         "                        epochs=3,   # pocas epochs para pruebas\n",
         "                        verbose=0)\n",
         "    return history.history['val_accuracy'][-1]"
-      ],
-      "metadata": {
-        "id": "T49j0ZXFntQ2"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "kJv6ibWmnvsG"
+      },
+      "outputs": [],
       "source": [
         "#operadores genéticos\n",
         "f_choices = [16, 32, 64]\n",
@@ -165,17 +156,40 @@
         "        i = random.randrange(len(chrom))\n",
         "        chrom[i] = random_chrom()[i]\n",
         "    return chrom"
-      ],
-      "metadata": {
-        "id": "kJv6ibWmnvsG"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uXaO0oXfnwfO",
+        "outputId": "1eb53605-8386-4b06-c786-c3fd8ebcd19f"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generación 0 | Mejor fitness: 0.7025\n",
+            "Generación 1 | Mejor fitness: 0.6350\n",
+            "Generación 2 | Mejor fitness: 0.6300\n",
+            "Mejor cromosoma: [32, 64, 128, 1, 2] con fitness: 0.6549999713897705\n"
+          ]
+        }
+      ],
       "source": [
-        "POP_SIZE = 4   # pobración de 4 cromos\n",
+        "POP_SIZE = 4   # población de 4 cromos\n",
         "GENERATIONS = 3\n",
         "\n",
         "pop = [random_chrom() for _ in range(POP_SIZE)] # gen crom alet con los parametros del CNN\n",
@@ -194,35 +208,21 @@
         "\n",
         "best_idx = np.argmax(fitnesses)\n",
         "print(\"Mejor cromosoma:\", pop[best_idx], \"con fitness:\", fitnesses[best_idx])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uXaO0oXfnwfO",
-        "outputId": "1eb53605-8386-4b06-c786-c3fd8ebcd19f"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Generación 0 | Mejor fitness: 0.7025\n",
-            "Generación 1 | Mejor fitness: 0.6350\n",
-            "Generación 2 | Mejor fitness: 0.6300\n",
-            "Mejor cromosoma: [32, 64, 128, 1, 2] con fitness: 0.6549999713897705\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
